fixed z-index of main menu

--- a/app/styles/_headerStyles.scss
+++ b/app/styles/_headerStyles.scss
@@ -31,7 +31,7 @@ header {
     position: absolute;
     right: 4.6875em;
     top: 30px;
-    z-index: 2 !important;
+    z-index: 3 !important;
   }
   ul {
     font-family: $font-stack-sanserif;
